--- a/about.html
+++ b/about.html
@@ -106,6 +106,7 @@
 		<div class="company-intro">
 			<img src="sources\75.9.2 logo_title_trans.png" alt="公司Logo"> <!-- 替换 logo.png 为实际Logo路径 -->
 			<h2>公司介绍</h2>
+			<p>北京黑箱科技有限公司</p>
 			<p>公司坐落于中国硅谷，北京海淀中关村。</p>
 			<p>这里高校云集，科研机构扎堆，精英荟萃，人才济济。</p>
 			<p>这里是先进科技的摇篮，这里是高精尖技术的发祥地。</p>
