--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     <!-- Footer Section -->	
     <footer>	
 			<p>北京黑箱科技有限公司  Copyright 2025</p>   
-			<p>关于我们: <a href="about.html">公司介绍</a>    联系邮箱：<a href="mailto:contacts@bjblackbox.com">contacts@bjblackbox.com</a>  微信：××××</p>
+			<p>关于我们: <a href="about.html">公司介绍</a>    联系我们：<a href="contacts.html">联系我们</p>
     </footer>
 	
 	
