--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 		
 		<div class="center-container"> 
 			<video class="video1" controls>
-				<source src="sources/25.1 新春祝福_My First Work_42s.mp4" type="video/mp4" alt="Blessing by AI Digital Human">			
+				<source src="sources/25.1 新春祝福_My First Work_42s_480P.mp4" type="video/mp4" alt="Blessing by AI Digital Human">			
 				你的浏览器不支持视频播放。
 			</video>
         </div>
