--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         </div>
 		
         <div class="img-container">
-            <img src="sources/75.10 SOS.jpg" width="300" height="360" controls alt="Partner Rewards">
+            <img src="sources/75.10 SOS.jpg" width="300" height="360" controls alt="SOS">
         </div>
     </section>
 
