--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         .section-content {
             font-size: 16px;
             color: #333;
-            margin-bottom: 20px;
+            margin: 20px;
         }   
 		.section-content1 {
 			font-size: 38px; /* 设置字体大小为38号 */
@@ -208,7 +208,7 @@
         .faq-content {
             font-size: 16px;
             color: #333;
-            margin: 10px 0;
+            margin: 10px 20px;
         }
 		
 		
