--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <header>    
 		<div class="header-center"> 
 			<span class="header img"> <a href="index.html"> <img src="sources\75.9.2 logo_title_trans.png" alt="公司Logo"> </a> </span>
-			<span> <a href="how.html"> 如何合成视频 </a> </span>
+			<span> <a href="how.html"> 合成视频 </a> </span>
 			<span> <a href="learnai.html"> 了解AI </a> </span>
 			<span> <a href="products.html"> 产品列表 </a> </span>
 			<span> <a href="joinus.html"> 参与我们 </a> </span>
