--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
 		<div class="header-center"> 
 			<span class="header img"> <a href="index.html"> <img src="resources\75.10.2 logo_title_trans.png" alt="公司Logo"> </a> </span>
 			<span> <a href="how.html"> 合成视频 </a> </span>
-			<span> <a href="learn.html"> 了解数字人 </a> </span>
+			<span> <a href="learn.html"> 数字人 </a> </span>
 			<span> <a href="products.html"> 产品列表 </a> </span>
 			<span> <a href="joinus.html"> 参与我们 </a> </span>
          </div>
