--- a/how.html
+++ b/how.html
@@ -124,7 +124,7 @@
 			margin-bottom: 20px; 			/* 副标题顶部间距 */
 		}		
 
-		/* 为第一个 video 设置最大宽度 */
+		/* 为第一个 video “祝福” 设置最大宽度 */
 		.video1 {
 			max-width: 340px;				/* 设置最大宽度 */
 			width: 100%;
@@ -132,9 +132,9 @@
 			margin: 0 auto; 				/* 居中 */
 		}
 
-		/* 为第二个 video 设置最大宽度 */
+		/* 为第二个 video “Proude and Projudice"设置最大宽度 */
 		.video2 {
-			max-width: 420px;				/* 设置最大宽度 */
+			max-width: 410px;				/* 设置最大宽度 */
 			width: 100%;
 			height: auto;					/* 保持宽高比例 */				
 			margin: 0 auto; 				/* 居中 */
@@ -267,7 +267,7 @@
 		/* 设置“Proud and Prejudice”背景图最大宽度 */
 		.image4 {
 			width: 100%;
-			max-width: 420px; 				/* 设置最大宽度 */
+			max-width: 410px; 				/* 设置最大宽度 */
             text-align: center;
 			margin: 0 auto; 				/* 居中 */
             margin: 10px;
