--- a/contacts.html
+++ b/contacts.html
@@ -226,7 +226,7 @@
 			<p>邮箱：contacts@bjblackbox.com</p>
 			<p>微信公众号：</p>
 			<p>网址：www.bjblackbox.com</p>
-			<p>地址：北京市海淀区中关村南大街理工大厦9楼</p>
+			<p>地址：北京市海淀区中关村南大街理工大厦9楼1813号</p>
 		</div>
 	</div>
 
