--- a/how.html
+++ b/how.html
@@ -246,7 +246,7 @@
             margin: 10px;
 		}
 
-
+/* ------------ 设置视频参数 ------------------ */
 		/* 为第一个 video “祝福” 设置最大宽度 */
 		.video1 {
 			max-width: 340px;				/* 设置最大宽度 */
