--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 		<div class="header-center"> 
 			<span class="header img"> <a href="index.html"> <img src="resources\75.10.2 logo_title_trans.png" alt="公司Logo"> </a> </span>
 			<span> <a href="how.html"> 合成视频 </a> </span>
-			<span> <a href="readme.md"> 数字人 </a> </span>
-			<span> <a href="readme.md"> 产品列表 </a> </span>
-			<span> <a href="readme.md"> 参与我们 </a> </span>
+			<span> <a href="index.html"> 数字人 </a> </span>
+			<span> <a href="index.html"> 产品列表 </a> </span>
+			<span> <a href="index.html"> 参与我们 </a> </span>
          </div>
 	</header>
 
