--- a/how.html
+++ b/how.html
@@ -320,7 +320,7 @@
  <!-- Why do this project section -->
     <section class="container">
  		<div class="section-subtitle1">
-            <p>看，就这么简单！</p>
+            <p>看，用数字人合成视频，就这么简单！</p>
         </div> 		     
  		<div class="section-subtitle2">
             <span>数字人形象 + 背景图 <font size=4px> & </font> 背景音乐 <font size=4px> & </font> 字幕 <font size=4px> & </font> 点缀 + 数字人声音 = 成片 </span>
