--- a/how.html
+++ b/how.html
@@ -284,7 +284,7 @@
             <span>看，用数字人制作视频，就这么简单！</span>
         </div> 		     
  		<div class="section-subtitle2">
-            <span>数字人形象 + 背景图 <font size=4px> & </font> 背景音乐 <font size=4px> & </font> 字幕 <font size=4px> & </font> 点缀 + 数字人声音 = 成片 </span>
+            <span>数字人形象 + 背景图 + 数字人声音 <font size=4px> & </font> 背景音乐 <font size=4px> & </font> 字幕 <font size=4px> & </font> 点缀 = 成片 </span>
         </div> 		     
         <div class="img-container">
 			<img class="image1" src="resources/25.3 数字人_又琳.png" controls alt="Digital Human">
