--- a/join.html
+++ b/join.html
@@ -337,7 +337,7 @@
     <div class="container">
         <h1>数字人定制项目咨询</h1>
         <!-- Netlify 表单 -->
-        <form name="digital-human-inquiry" method="POST" data-netlify="true">
+        <form name="digital-human-inquiry" method="POST" data-netlify="true" accept-charset="UTF-8">
             <!-- 基本信息 -->
             <div class="form-group">
                 <label for="name">姓名:</label>
