--- a/join.html
+++ b/join.html
@@ -203,6 +203,14 @@
             margin-bottom: 5px;
             font-weight: normal;
         }
+
+	#success-message {
+            display: none;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+	    
         .buttons {
             display: flex;
             justify-content: space-between;
