--- a/success.html
+++ b/success.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="北京黑箱科技有限公司，专注于AI数字人定制，帮助企业与个人实现科技赋能。">
     <title>联系我们 - 北京黑箱科技有限公司</title>
-
     <style>
 	
 
@@ -149,7 +148,6 @@
 
 
 
-
 /* ===================================== start of 本页内容设置 ================================= */
 
 
@@ -196,7 +194,7 @@
 	<!-- Header Section -->
     <header>    
 		<div class="header-center"> 
-			<span class="header img"> <a href="index.html"> <img src="resources\76.50.2 logo_title_trans.png" alt="公司Logo"> </a> </span>
+			<span class="header img"> <a href="index.html"> <img src="resources\76.2.2 logo_title_trans.png" alt="公司Logo"> </a> </span>
 			<span> <a href="how.html"> 如何做视频 </a> </span>
 			<span> <a href="learn.html"> 数字人 </a> </span>
 			<span> <a href="products.html"> 产品 </a> </span>
@@ -207,7 +205,7 @@
 
     <!-- Slogan section -->
     <section class="slogan"> 		
-        <h1>参与AI，共同开创AI数字人新纪元！</h1>
+        <h1>参与我们，共同开创AI数字人新纪元！</h1>
         <p>成为AI数字人定制领域的先锋，共享未来科技带来的机遇！</p>
     </section>
 
@@ -233,8 +231,8 @@
 			<div>
 				<p>微信公众号   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 官方抖音 </p>
 				<p class="footer img">
-					<span> <img src="resources\76.53 微信公众号.jpg" alt="微信公众号" > </span>
-					<span> <img src="resources\76.52.3 官方抖音_transparent_small.png" alt="官方抖音">  </span>
+					<span> <img src="resources\76.5 微信公众号.jpg" alt="微信公众号" > </span>
+					<span> <img src="resources\76.4.3 官方抖音_transparent_small.png" alt="官方抖音">  </span>
 				</p>
 			</div>
 			<div>
