--- a/join.html
+++ b/join.html
@@ -326,7 +326,7 @@
 
         
         <!-- Netlify 表单 -->
-        <form name="digital-human-inquiry" method="POST" data-netlify="true" action=".\success.html" accept-charset="UTF-8">
+        <form name="digital-human-inquiry" method="POST" data-netlify="true" action="success.html" accept-charset="UTF-8">
             <div class="form-group">
                 <p>请按下面表格提供基本信息，我们会在第一时间和您联系。</p>
                 
