--- a/success.html
+++ b/success.html
@@ -257,7 +257,7 @@
 			<p> &nbsp;</p>
 			<p>感谢您的提交，我们会尽快与您联系。</p>
 			<p> &nbsp;</p>
-			<p><a href="join.html">返回前页</a></p>
+			<p><a href="order.html">返回前页</a></p>
 		</div>
 	</section>
 
