--- a/partner.html
+++ b/partner.html
@@ -6,6 +6,17 @@
     <meta name="description" content="北京黑箱科技有限公司，专注于AI数字人定制，帮助企业与个人实现科技赋能。">
     <title>北京黑箱科技 —— 加入我们，共同开创AI数字人新纪元！</title>
 
+    <!-- 下面这6行内容，用于在手机页面上加装本页面时，显示公司Logo -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="resources/logo.png">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- iOS 主屏幕图标 -->
+    <link rel="apple-touch-icon" href="resources/logo-180x180.png">
+
+
     <style>
 
         /* 添加全局背景图 */
