--- a/contacts.html
+++ b/contacts.html
@@ -271,7 +271,7 @@
                 <li><strong>名称：</strong>北京黑箱科技有限公司</li>
                 <li><strong>手机：</strong>137 0102 3608</li>
                 <li><strong>邮箱：</strong>contacts@bjblackbox.com</li>
-                <li><strong>微信公众号：</strong>为了使得数字人具有更高的个性化，有鲜明的个人特征，定制数字人应运而生。这个定制专属数字人是完全按照您的形象一比一完全复刻出来的虚拟世界的您。在您生成视频或直播的时候，就能完全代替您出镜，节省您的时间，提高您的效率。</li>
+                <li><strong>微信公众号：</strong>......</li>
                 <li><strong>网址：</strong>www.bjblackbox.com</li>
                 <li><strong>地址：</strong>北京市海淀区中关村南大街理工大厦9楼1813号</li>
             </ul>
