--- a/avartar.html
+++ b/avartar.html
@@ -496,7 +496,7 @@
 
 		<!-- 开通及上传文件 -->
         <div class="img-container">
-			<img src="resources/67.1 开通账号并上传数字人至腾讯云.png" controls alt="open account & upload to clouds"> </a>
+			<img src="resources/67.1 开通账号并上传数字人至腾讯云.jpg" controls alt="open account & upload to clouds"> </a>
         </div>		
 		
 		<!-- 我的数字人视频文件 -->
