--- a/opportunity.html
+++ b/opportunity.html
@@ -355,9 +355,10 @@
         .container-bottom-button {
             max-width: 1000px;
             margin: 0 auto;   
-			padding-top: 20px; 			/* container1的内边距 */			
-            background: #fff;			/* 白色 */
-			border-radius: 8px;
+	    padding-top: 20px; 			/* container1的内边距 */			
+  	    margin-bottom: 20px; 		/* container1的外边距 */			
+	    background: #fff;			/* 白色 */
+	    border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }		
 
