--- a/opportunity.html
+++ b/opportunity.html
@@ -509,7 +509,7 @@
 
 	<!-- Partner Benefits Section -->
     <section class="container">
-        <h2 class="section-title">识别机会</h2>
+        <h2 class="section-title">识别机遇</h2>
         <div class="section-content3">
 			<h5>“在中国的不同发展阶段，新加坡历任领导人始终竭力设法<span style="font-size: larger; color: red">识别</span>到中国<span style="font-size: larger; color: #1E90FF;">当下优先发展</span>事项，然后<span style="font-size: larger; color: red">找出</span>双方<span style="font-size: larger; color: #1E90FF;">利益交汇点</span>，进而<span style="font-size: larger; color:red ">实现</span><span style="font-size: larger; color: #1E90FF;">双赢</span>。“</h5>
 			<p> —— 摘自新加坡前总理吴作栋2023年4月19日在“读懂中国·湾区对话”专题论坛上的主旨发言</p>
