--- a/apply.html
+++ b/apply.html
@@ -588,7 +588,7 @@
             <h2>下载申请表</h2>
 			<p>您也可以下载申请表，填写好，发送给到我们数字人项目专用邮箱，我们会更快收到您的申请。</p>
 			<div class="center-button-container">			
-				<a href="resources/75.8.1 Partner_Application_Form.pdf" class="download-button">去下载申请表</a>
+				<a href="resources/75.8.2 Partnership_Application_Form_v20250323" class="download-button">去下载申请表</a>
 			</div>
             <div>
                <p><strong>数字人项目专用邮箱：</strong> <a href="mailto:zy24@bjblackbox.com"> zy24@bjblackbox.com </a></p>
