--- a/opportunity.html
+++ b/opportunity.html
@@ -535,7 +535,7 @@
             <ul>
                 <li><strong>基础保障：</strong>签订正式合作协议，确保合伙人权利和资格。</li>
                 <li><strong>资源支持：</strong>我们提供完善的资源支持，助您从零开始。</li>
-                <li><strong>合作费用：</strong>和动辄几万几十万的合伙人保证金费用相比，我们的合伙人加入费用极低，低风险入驻，机会难得。</li>
+                <li><strong>合作费用：</strong>和动辄几万几十万的合伙人代理费费用相比，我们的合伙人代理费极低，低风险入驻，机会难得。</li>
                 <li><strong>高额提成：</strong>我们提供完善的分成机制，合作伙伴可根据业绩获得相应比例的收益。</li>
                 <li><strong>激励机制：</strong>优异团队和个人，依据激励机制和贡献大小还有额外奖励。</li>
                 <li><strong>游学机会：</strong>业绩特异个人，有机会获得海外游学赞助名额。</li>
