--- a/opportunity.html
+++ b/opportunity.html
@@ -545,7 +545,7 @@
                 <li><strong>人才缺口：</strong>截至2024年度，AI专业在校生仅约4万人，而缺口达500万人。您要捷足先得。</li>
                 <li><strong>遍地机会：</strong>北京市要求自2025秋季学期开始，全市中小学开设人工智能通识课程；杭州市要求所有部门......</li>
                 <li><strong>最为关键：</strong>您家乡的市场，可能还没有开发。他们不懂得AI，但他们需要AI，他们急切需要您的帮助！</li>				
-                <li><strong>还有很多：</strong>无法一一列举......</li>				
+                <li><strong>还有很多：</strong>还有很多理由，无法一一列举...</li>				
             </ul>						
         </div>		
         <div class="img-container">
