--- a/mechanism.html
+++ b/mechanism.html
@@ -542,7 +542,7 @@
     <section class="container">
         <h2 class="section-title">公司支持机制</h2>
         <div class="section-content">
-            <p>公司提供一切必要的资源，支持您轻轻松松完成您的目标。</p>
+            <p>公司提供必要的资源，支持您轻轻松松完成您的目标。</p>
         </div>		
         <div class="section-content1">
             <ul>
