--- a/mechanism.html
+++ b/mechanism.html
@@ -580,7 +580,7 @@
     <section class="container">
         <h2 class="section-title">合伙人激励机制</h2>
         <div class="section-content">
-            <p>公司设计了各种激励机制，充分体现能者多劳、多劳多得。让您开开心心赚钱。</p>
+            <p>公司设计了各种激励机制，充分体现能者多劳、多劳多得。让您开开心心赚钱。还有评选总裁特别奖，资助出国游学机会。</p>
         </div>		
         <div class="section-content3">
             <ul>
