--- a/mechanism.html
+++ b/mechanism.html
@@ -517,7 +517,7 @@
         </div>		
         <div class="section-content1">
             <ul>
-				<li><strong>申请合作</strong>：申请成为合伙人，缴纳合伙人年费金，公司为合伙人开通账户；</li>
+				<li><strong>申请合作</strong>：申请成为合伙人，缴纳合伙人代理资格费，公司为合伙人开通账户；</li>
 				<li><strong>公司培训</strong>：公司提供培训，让合伙人了解产品、了解客户群体、学习音视频采集及编辑技术；</li>
 				<li><strong>搭配小组</strong>：这是特别设计的机制。3人一组自愿搭配，互帮互助，分工协作。即独立操作，又各有所长；</li>
 				<li><strong>产品宣传</strong>：进行线上和线下宣传，拓展市场；</li>
