--- a/cooperation.html
+++ b/cooperation.html
@@ -617,7 +617,7 @@
                 </li>
                 <li>
                     <strong>3. 是否需要投资资金？</strong>
-                    <p class="faq-p">加入我们的合伙人计划只需支付极低不足万元的合伙人资源使用年费（年费不退）。</p>
+                    <p class="faq-p">加入我们的合伙人计划只需支付极低不足万元的合伙人代理资格费（代理资格费不退）。</p>
                 </li>
                 <li>
                     <strong>4. 合伙人能获得哪些支持？</strong>
