--- a/apply.html
+++ b/apply.html
@@ -485,7 +485,7 @@
  
 			<!-- 拟申请等级 -->
             <div class="form-group">
-                <label>拟申请合伙人等级</label>
+                <label>申请合伙人等级</label>
 				<p class="link"> * &nbsp;&nbsp; 合伙人等级请参考<a href="entitlements.html">“权益”</a> </p> 
 				<div class="form-group1">
 					<label for="grade">等&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;级:</label>
