--- a/apply.html
+++ b/apply.html
@@ -488,8 +488,8 @@
                 <label>申请合伙人等级</label>
 				<p class="link"> * &nbsp;&nbsp; 合伙人等级请参考<a href="entitlements.html">“权益”</a> </p> 
 				<div class="form-group1">
-					<label for="grade">等&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;级:</label>
-					<select id="grade" name="grade" required>
+					<label for="class">等&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;级:</label>
+					<select id="class" name="class" required>
 						<option value="普通">普通</option>
 						<option value="高级">高级</option>
 						<option value="VIP">VIP</option>
