--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="北京黑箱科技有限公司，专注于AI数字人定制，帮助企业与个人实现科技赋能。">
-    <title>北京黑箱科技 —— 参与AI，共同开创AI数字人新纪元！</title>
+    <title>参与AI，共同开创AI数字人新纪元！—— 北京黑箱科技有限公司</title>
 
 
 
